...
    "Continue on iPhone" : {

    },
    "Continue without account" : {

    },
    "Continue without an account" : {

    },
    "Create account" : {

    },
    "Create Account" : {
...
    "Format" : {

    },
    "Frequently Asked Questions" : {

    },
    "Get Started" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Get Started"
...
    "HDF Back Panel" : {

    },
    "Hide password" : {

    },
    "History" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        }
      }
    },
    "Home" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
...
    "Preparing explanation…" : {

    },
    "Privacy Policy" : {

    },
    "Profile" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
...
    "Project Saved" : {

    },
    "Project Summary" : {

    },
    "Projects" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Projects"
...
    "Row 10 to 15" : {

    },
    "Save" : {

    },
    "Scan" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Scan"
...
    "Sign in instead" : {

    },
    "Sign in to synchronize assembly projects across your Apple devices, or continue locally." : {

    },
    "Sign in with Apple" : {

    },
    "Sign Out" : {

    },
    "Sign Out of AssembleAI?" : {
...
            "state" : "translated",
            "value" : "Start Assembly"
          }
        }
      }
    },
    "Start Visual Inspection" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Visual Inspection"
...
    "Workbench Feed" : {

    },
    "You'll need" : {

    },
    "Your Camera, Your Data" : {

    },
    "Your data will stay on this device only" : {

    },
    "Your local progress will be saved on this device." : {
...
